--- a/src/strings/DataverseResources.bg-BG.resx
+++ b/src/strings/DataverseResources.bg-BG.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Все още не се поддържа директно използване на валутни полета. Използвайте Decimal(CurrencyField) като заобиколно решение, но имайте предвид, че типът decimal е с по-малък диапазон от типа за валута.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Наборът от опции на име „{0}“ от свързаните таблици понастоящем не се поддържа в колони за формули.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Метаданните за набора от опции на име „{0}“ не бяха намерени.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Операцията не може да бъде изпълнена върху няколко набори от опции. Използвайте един набор от опции като тип на резултата.</value>
     
   </data>
 </root>
