--- a/src/strings/DataverseResources.ca-ES.resx
+++ b/src/strings/DataverseResources.ca-ES.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Encara no s'admet l'ús directe dels camps de moneda. Utilitzeu Decimal(camp de moneda) com a solució alternativa, però tingueu en compte que Decimal té un interval més petit que Moneda.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>El conjunt d'opcions amb el nom {0} de les taules relacionades no s'admet actualment a les columnes de fórmula.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>No s'han trobat les metadades del conjunt d'opcions amb el nom {0}.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>L'operació no es pot dur a terme en diversos conjunts d'opcions. Utilitzeu un únic conjunt d'opcions com a tipus de resultat.</value>
     
   </data>
 </root>
