--- a/src/strings/DataverseResources.de-DE.resx
+++ b/src/strings/DataverseResources.de-DE.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Die direkte Verwendung von Währungsfeldern wird noch nicht unterstützt. Verwenden Sie Decimal(CurrencyField) als Problemumgehung, beachten Sie jedoch, dass die Dezimalzahl einen kleineren Bereich als die Währung umfasst.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Der Optionssatz mit dem Namen {0} aus verknüpften Tabellen wird derzeit in Formelspalten nicht unterstützt.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Die Metadaten für den Optionssatz mit dem Namen {0} wurden nicht gefunden.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Der Vorgang kann nicht an mehreren Optionssätzen ausgeführt werden. Verwenden Sie einen einzelnen Optionssatz als Ergebnistyp.</value>
     
   </data>
 </root>
