--- a/src/strings/DataverseResources.et-EE.resx
+++ b/src/strings/DataverseResources.et-EE.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Valuutaväljade otse kasutamist veel ei toetata. Kasutage lahendusena väärtust Decimal(CurrencyField), kuid pange tähele, et kümnendkohal on väiksem vahemik kui valuutal.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Nimega {0} suvandikomplekt pole seotud tabelitest praegu valemiveergudes toetatud.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Nimega {0} suvandikomplekti metaandmeid ei leitud.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Toimingut ei saa teha mitme suvandikomplektiga. Kasutage tulemi tüübina ühte suvandikomplekti.</value>
     
   </data>
 </root>
