--- a/src/strings/DataverseResources.fr-FR.resx
+++ b/src/strings/DataverseResources.fr-FR.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>L’utilisation directe des champs de devises n’est pas encore prise en charge. Utilisez Décimale (CurrencyField) comme solution de contournement, mais notez que la plage de décimales est plus petite que la devise.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Le groupe d’options avec le nom {0} provenant des tables associées n’est actuellement pas pris en charge dans les colonnes de formules.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Les métadonnées du groupe d’options avec le nom {0} sont introuvables.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>L’opération ne peut pas être effectuée sur plusieurs groupes d’options. Utilisez un seul groupe d’options comme type de résultat.</value>
     
   </data>
 </root>
