--- a/src/strings/DataverseResources.it-IT.resx
+++ b/src/strings/DataverseResources.it-IT.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Uso diretto dei campi di valuta non ancora supportato. Usa Decimal(CurrencyField) per risolvere il problema, ma tieni presente che l'intervallo dei decimali è inferiore a quello della valuta.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Il set di opzioni con nome {0} dalle tabelle correlate non è al momento supportato nelle colonne della formula.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Impossibile trovare i metadati per il set di opzioni con nome {0}.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Impossibile eseguire l'operazione su più set di opzioni. Utilizza un set di opzioni singolo come tipo di risultato.</value>
     
   </data>
 </root>
