--- a/src/strings/DataverseResources.ru-RU.resx
+++ b/src/strings/DataverseResources.ru-RU.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Прямое использование полей валют пока не поддерживается. Используйте десятичное поле CurrencyField в качестве обходного пути, но обратите внимание, что у десятичных полей диапазон меньше, чем у полей валюты.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Набор параметров с именем {0} из связанных таблиц в настоящий момент не поддерживается в столбцах формул.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Метаданные для набора параметров с именем {0} не найдены.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Нельзя выполнить операцию для нескольких наборов параметров. Используйте один набор параметров в качестве типа результатов.</value>
     
   </data>
 </root>
