--- a/src/strings/DataverseResources.sk-SK.resx
+++ b/src/strings/DataverseResources.sk-SK.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Priame použitie polí meny zatiaľ nie je podporované. Ako alternatívne riešenie použite Decimal(CurrencyField), ale upozorňujeme, že desatinné číslo má menší rozsah ako mena.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Množina možností s názvom {0} zo súvisiacich tabuliek sa momentálne nepodporuje v stĺpcoch vzorcov.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Metaúdaje pre množinu možností s názvom {0} sa nenašli.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Operáciu nemožno vykonať s viacerými množinami možností. Ako typ výsledku použite jednu množinu možností.</value>
     
   </data>
 </root>
