--- a/src/strings/DataverseResources.tr-TR.resx
+++ b/src/strings/DataverseResources.tr-TR.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Para birimi alanlarının doğrudan kullanımı henüz desteklenmiyor. Geçici bir çözüm olarak Decimal(CurrencyField) alanını kullanın ancak ondalık aralığının para biriminden daha küçük olduğunu unutmayın.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>İlgili tablolardan {0} adlı seçenek kümesi şu anda formül sütunlarında desteklenmemektedir.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>{0} adlı seçenek kümesi için meta veriler bulunamadı.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>İşlem birden fazla seçenek kümesinde gerçekleştirilemez. Lütfen sonuç türü olarak tek bir seçenek kümesi kullanın.</value>
     
   </data>
 </root>
