--- a/src/strings/DataverseResources.zh-TW.resx
+++ b/src/strings/DataverseResources.zh-TW.resx
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -218,6 +219,18 @@
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>目前尚不支援直接使用貨幣欄位。請使用 Decimal(CurrencyField) 做為因應措施，但請注意，小數的範圍小於貨幣。</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>目前公式欄不支援相關資料表中名稱為 {0} 的選項組。</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>找不到名稱為 {0} 的選項組的中繼資料。</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>無法對多個選項組執行此作業。請使用單一選項組做為結果類型。</value>
     
   </data>
 </root>
